feat(truck-info-form): Add position prop to open date-time picker above input

--- a/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
@@ -142,6 +142,7 @@
             type="date"
             label="تاریخ اتمام"
             placeholder="تاریخ اتمام"
+            datePickerPosition="top"
             [control]="truckNativenessExpiredDate"
             validationField="truckNativenessExpiredDate"
             [readOnly]="true"
