fix(components/forms)[load-capacitor-form]: rename a button

--- a/src/app/components/forms/load-capacitor-form/load-capacitor-form.component.html
+++ b/src/app/components/forms/load-capacitor-form/load-capacitor-form.component.html
@@ -245,7 +245,7 @@
         <p-button
         (click)="editOrRegister()"
         [disabled]="capacitorForm.invalid || loading"
-        label="کشتی بار"
+        label="کنسلی بار"
         size="small"
         severity="info"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-9rem lg:w-10rem"
