refactor(text-input): rename generic-input to text-input-component

--- a/src/app/components/shared/inputs/text-input/text-input.component.html
+++ b/src/app/components/shared/inputs/text-input/text-input.component.html
@@ -18,11 +18,12 @@
       </p-inputgroup-addon>
     }
 
-    @if (type === 'text') {
+    @if (type != 'date') {
       <!-- Text Input -->
       <input
         #inputRef
         pInputText
+        [type]="type"
         [formControl]="control"
         [placeholder]="placeholder"
         [readOnly]="readOnly"
