feat(loading-service): add loading-service for managing global loading state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-loading />
 <p-toast baseZIndex="100" position="top-center" [showTransformOptions]="'translateY(100%)'"
   [showTransformOptions]="'translateX(100%)'" styleClass="max-w-95vw" />
 <router-outlet />
