refactor(forms): update references after renaming generic-input to text-input-component
- Replaced all <generic-input> usages with <text-input-component> across all related form components.
- Updated bindings and validation to match the new component.
- This improves naming clarity and reflects the actual purpose of the input component.

--- a/src/app/components/forms/factories-production-centers-form/factories-production-centers-form.component.html
+++ b/src/app/components/forms/factories-production-centers-form/factories-production-centers-form.component.html
@@ -22,7 +22,7 @@
     <div class="grid col-12">
       <!-- Hidden FPC ID -->
       <div class="col-12 md:col-6">
-        <app-generic-input
+        <app-text-input
           label="شناسه مرکز"
           [readOnly]="true"
           [disabled]="true"
@@ -36,7 +36,7 @@
 
       <!-- Title -->
       <div class="col-12 md:col-6">
-        <app-generic-input
+        <app-text-input
           label="عنوان"
           placeholder="عنوان"
           class="flex-1"
@@ -48,7 +48,7 @@
 
       <!-- Manager Name -->
       <div class="col-12 md:col-6">
-        <app-generic-input
+        <app-text-input
           label="نام مدیر"
           placeholder="نام مدیر"
           class="flex-1"
@@ -60,7 +60,7 @@
 
       <!-- Manager Mobile -->
       <div class="col-12 md:col-6">
-        <app-generic-input
+        <app-text-input
           label="شماره موبایل مدیر"
           placeholder="شماره موبایل"
           class="flex-1"
@@ -72,7 +72,7 @@
 
       <!-- Telephone -->
       <div class="col-12 md:col-6">
-        <app-generic-input
+        <app-text-input
           label="تلفن"
           placeholder="شماره تلفن مثال 02123456789"
           class="flex-1"
@@ -84,7 +84,7 @@
 
       <!-- Address -->
       <div class="col-12 md:col-6">
-        <app-generic-input
+        <app-text-input
           label="آدرس"
           placeholder="آدرس"
           class="flex-1"
@@ -96,7 +96,7 @@
 
       <!-- Email -->
       <div class="col-12 md:col-6">
-        <app-generic-input
+        <app-text-input
           label="ایمیل"
           placeholder="ایمیل"
           class="flex-1"
