--- a/src/app/components/forms/forget-password-form/forget-password-form.component.html
+++ b/src/app/components/forms/forget-password-form/forget-password-form.component.html
@@ -1,19 +1,31 @@
-<form class="flex flex-column gap-6 mb-5" [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
+<form
+  class="flex flex-column gap-6 mb-5"
+  [formGroup]="forgetPasswordForm"
+  (ngSubmit)="onSubmit()"
+>
   <div class="flex flex-column gap-5">
-    <h3 class="text-center" [innerHTML]="forgetPasswordTitle">
-    </h3>
+    <h3 class="text-center" [innerHTML]="forgetPasswordTitle"></h3>
 
     <p class="text-center">
-      شماره تلفنی که در سامانه برای شما ثبت شده است را وارد کنید و سپس منتظر دریافت رمز خود از طریق سامانه پیامکی با سرشماره سامانه باشید.
+      شماره تلفنی که در سامانه برای شما ثبت شده است را وارد کنید و سپس منتظر
+      دریافت رمز خود از طریق سامانه پیامکی با سرشماره سامانه باشید.
     </p>
   </div>
 
-  <app-phone-input [control]="phone" />
+  <app-text-input
+    label="شماره موبایل"
+    placeholder="شماره موبایل خود را وارد کنید."
+    validationField="mobile"
+    [control]="phone"
+  />
 
   <div class="flex flex-column gap-2 mb-5">
-    <p-button [disabled]="forgetPasswordForm.invalid" type="submit" styleClass="px-5 h-2-5rem w-full">
+    <p-button
+      [disabled]="forgetPasswordForm.invalid"
+      type="submit"
+      styleClass="px-5 h-2-5rem w-full"
+    >
       تایید
     </p-button>
   </div>
 </form>
-
