--- a/src/app/components/forms/truck-driver-manages-form/driver-truck-wallet-form/driver-truck-wallet-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/driver-truck-wallet-form/driver-truck-wallet-form.component.html
@@ -18,7 +18,7 @@
     [formGroup]="mainSearchForm"
   >
     <div class="flex gap-3">
-      <app-generic-input
+      <app-text-input
         [control]="searchSmartCard"
         validationField="smartCard"
         icon="pi pi-id-card"
@@ -49,7 +49,7 @@
         (ngSubmit)="loadTruckInfo()"
       >
         <div class="grid col-12">
-          <app-generic-input
+          <app-text-input
             hidden
             label="کد ناوگان"
             [readOnly]="true"
@@ -59,7 +59,7 @@
           />
 
           <div class="flex gap-2 col-12 md:col-6">
-            <app-generic-input
+            <app-text-input
               label="شماره هوشمند"
               class="flex-1"
               placeholder="شماره هوشمند"
@@ -79,7 +79,7 @@
           </div>
 
           <div class="col-12 md:col-6">
-            <app-generic-input
+            <app-text-input
               label="شماره پلاک"
               class="flex-1"
               placeholder="شماره پلاک"
@@ -90,7 +90,7 @@
             />
           </div>
           <div class="col-12 md:col-6">
-            <app-generic-input
+            <app-text-input
               label="شماره سریال"
               class="flex-1"
               placeholder="شماره سریال"
@@ -112,7 +112,7 @@
         (ngSubmit)="loadDriverInfo()"
       >
         <div class="grid col-12">
-          <app-generic-input
+          <app-text-input
             hidden
             label="کد راننده"
             [readOnly]="true"
@@ -122,7 +122,7 @@
           />
 
           <div class="flex gap-2 col-12 md:col-6">
-            <app-generic-input
+            <app-text-input
               label="کدملی راننده"
               class="flex-1"
               placeholder="کدملی راننده"
@@ -142,7 +142,7 @@
           </div>
 
           <div class="col-12 md:col-6">
-            <app-generic-input
+            <app-text-input
               label="نام راننده"
               class="flex-1"
               placeholder="نام راننده"
@@ -162,7 +162,7 @@
         [class.opacity-60]="loading"
       >
         <div class="grid col-12">
-          <app-generic-input
+          <app-text-input
             hidden
             label="شناسه کیف پول"
             [readOnly]="true"
@@ -171,7 +171,7 @@
             [addonWidth]="addonWidth"
           />
 
-          <app-generic-input
+          <app-text-input
             hidden
             label="شناسه نوبت"
             [readOnly]="true"
@@ -181,7 +181,7 @@
           />
 
           <div class="col-12 md:col-6">
-            <app-generic-input
+            <app-text-input
               label="نوبت"
               class="flex-1"
               placeholder="نوبت"
@@ -193,7 +193,7 @@
           </div>
 
           <div class="col-12 md:col-6">
-            <app-generic-input
+            <app-text-input
               label="کیف پول"
               class="flex-1"
               placeholder="کیف پول"
