--- a/src/app/components/shared/inputs/password-input/password-input.component.html
+++ b/src/app/components/shared/inputs/password-input/password-input.component.html
@@ -1,45 +1,12 @@
-<div>
-  <p-inputgroup styleClass="h-2-5rem">
-    <p-inputgroup-addon
-      class="bg-primary text-white border-round-right flex align-items-center justify-content-center px-3">
-      <i class="pi pi-lock"></i>
-    </p-inputgroup-addon>
-
-    <input
-      [type]="hidePassword ? 'password' : 'text'"
-      pInputText
-      placeholder="رمز عبور"
-      class="w-full px-2 h-full"
-      [formControl]="control"
-      [ngClass]="{
-        'border-red-500': control.touched && control.invalid,
-        'border': true,
-        'border-round-left': true,
-        'px-2': true,
-        'h-full': true,
-        'w-full': true
-      }"
-    />
-
-    <p-inputgroup-addon
-      (click)="togglePassword()"
-      class="bg-secondary border-round-left flex align-items-center justify-content-center px-3 cursor-pointer"
-    >
-      <i [class]="hidePassword ? 'pi pi-eye' : 'pi pi-eye-slash'"></i>
-    </p-inputgroup-addon>
-  </p-inputgroup>
-<div>
-  @if (control.touched && control.errors) {
-    @if (control.errors['required']) {
-      <p-message severity="error" variant="simple" size="small">
-        وارد کردن رمز عبور الزامی است.
-      </p-message>
-    }
-    @else if (control.errors['minlength']) {
-      <p-message severity="error" variant="simple" size="small">
-        رمز عبور باید حداقل {{ control.errors['minlength'].requiredLength }} کاراکتر باشد.
-      </p-message>
-    }
-  }
-</div>
-</div>
+<app-text-input
+  [icon]="icon"
+  [type]="hidePassword ? 'password' : 'text'"
+  [placeholder]="placeholder"
+  [control]="control"
+  [disabled]="disabled"
+  [readOnly]="readOnly"
+  [buttonIcon]="hidePassword ? 'pi pi-eye' : 'pi pi-eye-slash'"
+  [addonWidth]="addonWidth"
+  (clickButton)="togglePassword()"
+  validationField="password"
+/>
