--- a/src/app/components/shared/sub-menu/sub-menu.component.html
+++ b/src/app/components/shared/sub-menu/sub-menu.component.html
@@ -5,6 +5,7 @@
       class="cursor-pointer"
     >
       <p-card
+        role="button"  
         styleClass="flex flex-column justify-between surface-card border-round shadow-2 hover:shadow-4"
       >
         <!-- Header -->
@@ -12,14 +13,14 @@
           <div class="flex justify-content-between align-items-center px-3 py-2 border-bottom-1 surface-border">
             <span class="text-lg font-bold text-900">{{ process.title }}</span>
             <i [class]="process.icon" class="pi text-2xl text-primary"></i>
+            </div>
+          </ng-template>
+          
+          <!-- Body -->
+          <div class="px-3 py-2 flex-grow-1">
+            <p class="text-700 text-sm line-height-3">{{ process.description }}</p>
           </div>
-        </ng-template>
-
-        <!-- Body -->
-        <div class="px-3 py-2 flex-grow-1">
-          <p class="text-700 text-sm line-height-3">{{ process.description }}</p>
-        </div>
-      </p-card>
+        </p-card>
     </div>
   }
 </div>
