style(search-input): add custom height (h-2-5rem) to input

--- a/src/app/components/shared/inputs/search-input/search-input.component.html
+++ b/src/app/components/shared/inputs/search-input/search-input.component.html
@@ -30,7 +30,7 @@
       type="text"
       pInputText
       [placeholder]="placeholder"
-      class="flex-grow-1 w-full"
+      class="flex-grow-1 w-full h-2-5rem"
     />
     }
   </p-input-group>
